<resources>
    <string name="app_name">Driver health partner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">此处填写昵称</string>
    <string name="nav_header_subtitleSignal">此处填写个性签名</string>
    <string name="nav_header_subtitleScore">此处填写积分</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--底部菜单栏字符串配置-->
    <string name="title_home">主页</string>
    <string name="title_dashboard">健康</string>
    <string name="title_notifications">精选</string>

    <!--健康页面字符串配置-->
    <string name="title_health_head">阶段性健康分析</string>
    <string name="personal_medical_history">个人病史</string>
    <string name="diabetes">糖尿病</string>
    <string name="heart_disease">心脏病</string>
    <string name="High_blood_pressure">高血压</string>
    <string name="wait">等等</string>
    <string name="jingzhui">颈椎</string>
    <string name="breath_pine">呼吸</string>

    <!--精选页面字符串配置-->
    <string name="title_more_head1">健康助手</string>
    <string name="title_more_head2">第三方合作</string>
    <string name="test_self">健康自测</string>
    <string name="health_sports_instruct">健康运动指导</string>
    <string name="diet">饮食推荐</string>

    <string name="doctor_online">在线医生</string>
    <string name="dirve_helper">代驾查询</string>
    <string name="guahao_online">在线挂号</string>


    <!--个人信息管理页面字符串配置-->
    <string name="title">注册个人信息</string>
    <string name="username">昵称：</string>
    <string name="input_username">请输入昵称</string>
    <string name="password">密码：</string>
    <string name="input_password">请输入密码</string>
    <string name="input_again_password">请输入密码</string>
    <string name="phone">电话：</string>
    <string name="input_phone">请输入电话号码</string>
    <string name="email">邮箱：</string>
    <string name="input_email">请输入邮箱</string>
    <string name="gender">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="hobby">兴趣：</string>
    <string name="travel">旅行</string>
    <string name="music">音乐</string>
    <string name="food">美食</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>

    <!--登录注册字符串页面配置-->
    <string name="accountRegister_input_nickname">请输入你的昵称</string>
    <string name="accountLogin_input_password_hint">请输入密码</string>
    <string name="accountRegister_input_password_again_hint">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="accountLogin_input_name_hint">请输入帐号</string>

    <!--第一次注册个人信息完善页面信息字符串配置-->


</resources>
