<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical"
    android:layout_marginBottom="70dp">

    <!--标题栏-->
    <TextView
        android:id="@+id/message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="left"
        android:textColor="#d23e8f"
        android:textStyle="bold"
        android:text="@string/title_health_head"
        android:layout_marginBottom="7dp"
        />
    <!--android:background="#ebebeb"-->


<!--个人病历-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ebebeb">

        <TextView
            android:drawableLeft="@mipmap/history"
            android:background="@drawable/textview_border"
            android:id="@+id/textView_health_11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/personal_medical_history"
            android:layout_weight="1" />

        <!--android:background="#affafa"-->
        <!--个人病历右侧窗口-->
            <TableLayout
                android:background="@drawable/textview_border"
                android:collapseColumns="3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.3">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkBox_health_11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/diabetes" />

                <CheckBox
                    android:id="@+id/checkBox_health_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/heart_disease" />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkBox_health_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/High_blood_pressure" />

                <CheckBox
                    android:id="@+id/checkBox_health_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wait" />
                </TableRow>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/checkBox_health_15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wait" />

                <CheckBox
                    android:id="@+id/checkBox_health_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wait" />
                </TableRow>
            </TableLayout>
        <!--</LinearLayout>-->
    </LinearLayout>


<!--颈椎数据显示-->
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@drawable/textview_border"
            android:drawableLeft="@mipmap/jingzhui"
            android:id="@+id/textView_health_21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:ems="1"
            android:layout_weight="1"
            android:text="@string/jingzhui" />
        <TableLayout
            android:background="@drawable/textview_border"
            android:collapseColumns="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.3">
            <TableRow
                android:layout_marginLeft="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="风险等级:"
                    android:background="@drawable/border_bottom"
                    android:gravity="center_vertical"
                    android:textColor="#52c8af"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="建议措施"
                    android:gravity="center_vertical"
                    android:textColor="#c8b452"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <!--红黄绿   高中低-->
                <!--红 #FF0000   黄  #FBFF00   绿  #00CE7E -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="低"
                    android:background="#00CE7E"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minWidth="90sp"
                    android:maxWidth="90sp"
                    android:text="多活动颈椎"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </TableRow>
        </TableLayout>
    </LinearLayout>


<!--呼吸道数据显示-->
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@drawable/textview_border"
            android:drawableLeft="@mipmap/breath"
            android:id="@+id/textView_health_31"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:ems="1"
            android:layout_weight="1"
            android:text="@string/breath_pine" />

        <TableLayout
            android:background="@drawable/textview_border"
            android:collapseColumns="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.3">
            <TableRow
                android:layout_marginLeft="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="风险等级:"
                    android:gravity="center_vertical"
                    android:background="@drawable/border_bottom"
                    android:textColor="#52c8af"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="建议措施"
                    android:gravity="center_vertical"
                    android:textColor="#c8b452"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <!--红黄绿   高中低-->
                <!--红 #FF0000   黄  #FBFF00   绿  #00CE7E -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="高"
                    android:background="#FF0000"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="建议多开车窗"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </TableRow>
        </TableLayout>
    </LinearLayout>


<!--其他更多信息显示-->
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="@drawable/textview_border"
            android:drawableLeft="@mipmap/mor"
            android:id="@+id/textView_health_41"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:ems="1"
            android:layout_weight="1"
            android:text="@string/wait" />

        <TableLayout
            android:background="@drawable/textview_border"
            android:collapseColumns="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.3">
            <TableRow
                android:layout_marginLeft="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="风险等级:"
                    android:background="@drawable/border_bottom"
                    android:gravity="center_vertical"
                    android:textColor="#52c8af"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="建议措施"
                    android:gravity="center_vertical"
                    android:textColor="#c8b452"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5">
                <!--红黄绿   高中低-->
                <!--红 #FF0000   黄  #FBFF00   绿  #00CE7E -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="中"
                    android:background="#FBFF00"
                    android:gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="建议多开车窗"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>


